# python-mastery

./: CHEATSHEET.md  INTERVIEW.md  README.md  pyproject.toml
lessons/: 01_typing.py  02_data_model.py  03_dataclasses.py  04_pydantic.py  05_iterators_generators.py  06_decorators.py  07_context_managers.py  08_async_.py  09_concurrency_gil.py  10_errors.py  11_pattern_matching.py  12_collections_stdlib.py  13_numpy_basics.py  14_gotchas.py  15_descriptors.py  16_metaclasses.py  17_memory_gc.py  18_async_advanced.py  19_regex.py  20_logging.py  21_design_patterns.py  22_packaging.py
tests/: test_pytest_basics.py
