[project]
name = "python-mastery"
version = "0.1.0"
description = "Modern Python 3 mastery for AI engineers — runnable lessons + interview prep."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.7",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

# Not a package — just a collection of runnable lessons.
[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
